--- a/test.html
+++ b/test.html
@@ -3,7 +3,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="play.js" path="index.js" post="user">alert(88)</script>
-    
-
+    <script src="play.js" >
+      app=new setup({type:"matte"})
+      start=e=>{
+      body.add(new button("press me").animate({background:"blue",width:"900%",opacity:0}, 8000))
+      }
+      
+    </script>
 </html>
